Rename package to toastr_flutter to resolve pub.dev publishing conflict
- Changed package name from 'toastr' to 'toastr_flutter'
- Updated all imports and references
- Updated README and documentation
- Updated example project configuration
- Ready for publication to pub.dev

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: toastr_example
-description: Example app for the toastr package.
+name: toastr_flutter_example
+description: Example app for the toastr_flutter package.
 version: 1.0.0+1
 publish_to: none
 
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  toastr:
+  toastr_flutter:
     path: ../
 
 dev_dependencies:
