Enhance toastr package with improved documentation, code formatting, and security features
- Updated ToastrConfig class with detailed documentation and examples.
- Refined ToastrService to include comprehensive comments on functionality.
- Improved ToastrHelper with usage examples and better method organization.
- Enhanced ToastrValidator for stricter security checks and validation.
- Cleaned up widget code for ImprovedToastrWidget and ToastrWidget for better readability.
- Updated pubspec.yaml with a more descriptive package description and added topics.
- Removed obsolete test files to maintain a clean codebase.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,20 @@
 name: toastr_flutter
-description: A highly customizable Flutter package for displaying beautiful toast notifications with animations, multiple types, and flexible positioning.
-version: 1.0.0+4
+description: A highly customizable Flutter package for displaying beautiful toast notifications with smooth animations, multiple types, and flexible positioning. Works like SnackBar with no initialization required.
+version: 1.0.0+5
 homepage: https://github.com/IgnacioMan1998/toastr
 repository: https://github.com/IgnacioMan1998/toastr
 issue_tracker: https://github.com/IgnacioMan1998/toastr/issues
 documentation: https://github.com/IgnacioMan1998/toastr#readme
+
+topics:
+  - toast
+  - notification
+  - snackbar
+  - alert
+  - popup
+  - flutter-package
+  - ui
+  - material-design
 
 environment:
   sdk: ^3.9.0
